--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>color.js</title>
+        <title>Employee Database</title>
 <!--stylesheets-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -14,5 +14,6 @@
             <li><a href="employees/johnny_football.html">Johnny Football</a></li>
             <li><a href="employees/cathy_wicket.html">Cathy Wicket</a></li>
             <li><a href="employees/davey_chase.html">Davey Chase</a></li>
+        </ul>
     </body>
 </html>
