--- a/employees/johnny_football.html
+++ b/employees/johnny_football.html
@@ -4,39 +4,31 @@
     <head>
         <!-- Load Bootstrap -->
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link rel="stylesheet" href="../css/employee-styles.css">
     </head>
 
     <body>
-        <div style="padding:50px;"class="container">
-            <!-- Back to index.html -->
-            <a href="../index.html" class="btn btn-info">back</a>
-            <!-- Employee Name -->
-            <h2>Johnny Football</h2>
-
-            <div class="media">
-                <div class="media-left">
-                    <img class="img-circle" style="border:2px solid #DDD;width:100px;display:inline;" src="https://randomuser.me/api/portraits/lego/1.jpg"/>
-                </div>
-                <div class="media-body">
-                <!-- Employee Position -->
-                    <h4 class="media-heading">Senior Manager</h4>
-                    <div>
-                        <!-- Employee Bio -->
-                        <h5>Age</h5>
-                        <p>
-                            32
-                        </p>
-                        <h5>Email</h5>
-                        <p>
-                            jfootball@branstation.io
-                        </p>
-                        <h5>Bio</h5>
-                        <p>
-                            Storyfinder, Accountant, Truck Driver, Han Solo's College Roommate. I yell at inanimate objects.
-                        </p>
-                    </div>
-                </div>
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <a class="navbar-text" href="../index.html">Home</a>
+                <a class="navbar-text pull-right" href="cathy_wicket.html">Cathy</a>
+                <a class="navbar-text pull-right" href="johnny_football.html">Johnny</a>
+                <a class="navbar-text pull-right" href="davey_chase.html">Davey</a>
             </div>
+        </nav>
+        <div class="container">
+        <div class="row vcenter">
+            <div class="col-12 col-md-8">
+                <h2>Storyfinder, Accountant, Truck Driver, Han Solo's College Roommate. I yell at inanimate objects</h2>
+            </div>
+            <div class="col-12 col-md-4">
+                <img class="img-circle emp-img" src="../img/WDFT - Ben Mitchell.jpg"/>
+                <h1>Johnny Football</h1>
+                <h2 class="text-muted">Senior Manager</h2>
+                <h4 class="text-muted">Age 32</h4>
+            </div>
+        </div>
         </div>
     </body>
 </html>
