--- a/employees/template.html
+++ b/employees/template.html
@@ -20,13 +20,13 @@
         <div class="container">
         <div class="row vcenter">
             <div class="col-12 col-md-8">
-                <h2>A nice little bio...</h2>
+                <h2>Storyfinder, Accountant, Truck Driver, Han Solo's College Roommate. I yell at inanimate objects</h2>
             </div>
             <div class="col-12 col-md-4">
-                <img class="img-circle emp-img" src="https://randomuser.me/api/portraits/lego/1.jpg"/>
-                <h1>Cathy Wicket</h1>
-                <h2 class="text-muted">Senior VP</h2>
-                <h4 class="text-muted">Age 40</h4>
+                <img class="img-circle" style="border:2px solid #DDD;width:100px;display:inline;" src="https://randomuser.me/api/portraits/lego/1.jpg"/>
+                <h1>Johnny Football</h1>
+                <h2 class="text-muted">Senior Manager</h2>
+                <h4 class="text-muted">Age 32</h4>
             </div>
         </div>
         </div>
