--- a/index.html
+++ b/index.html
@@ -5,15 +5,45 @@
 <!--stylesheets-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <!--javascript-->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </head>
     <body>
-        <h1>Employee Names!</h1>
-        <ul>
-            <li><a href="employees/johnny_football.html">Johnny Football</a></li>
-            <li><a href="employees/cathy_wicket.html">Cathy Wicket</a></li>
-            <li><a href="employees/davey_chase.html">Davey Chase</a></li>
-        </ul>
+        <div class="jumbotron">
+            <h1>Employee Names!</h1>
+            <h3>Company Name</h3>
+        </div>
+        <div class="container">
+            <div class="row bio-row">
+                <div class="col-xs-4 col-sm-4 col-lg-4 bio-col">
+                    <div class="bio-panel">
+                        <a href="employees/cathy_wicket.html"><img src="a.jpg" alt="Johnny Football" class="img img-circle"></a>
+                        <a href="employees/cathy_wicket.html"><h3>Cathy Wicket</h3></a>
+                        <h3>Senior VP</h3>
+                    </div>
+                </div>
+                <div class="col-xs-4 col-sm-4 col-lg-4 bio-col">
+                    <div class="bio-panel">
+                        <a href="employees/davey_chase.html"><img src="a.jpg" alt="Cathy Wicket" class="img img-circle"></a>
+                        <a href="employees/davey_chase.html"><h3>Davey Chase</h3></a>
+                        <h3>Project Manager</h3>
+                    </div>
+                </div>
+                <div class="col-xs-4 col-sm-4 col-lg-4 bio-col">
+                    <div class="bio-panel">
+                        <a href="employees/johnny_football.html"><img src="a.jpg" alt="Davey Chase" class="img img-circle"></a>
+                        <a href="employees/johnny_football.html"><h3>Johnny Football</h3></a>
+                        <h3>Senior Manager</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="bloat">
+        </div>
+        <div class="footer">
+            <p>Made with love</p>
+            <p>2017</p>
+        </div>
     </body>
 </html>
