--- a/employees/template.html
+++ b/employees/template.html
@@ -6,29 +6,38 @@
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="../css/employee-styles.css">
+        <link rel="stylesheet" href="../css/helpers.css">
     </head>
 
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
-                <a class="navbar-text" href="../index.html">Home</a>
-                <a class="navbar-text pull-right" href="cathy_wicket.html">Cathy</a>
-                <a class="navbar-text pull-right" href="johnny_football.html">Johnny</a>
-                <a class="navbar-text pull-right" href="davey_chase.html">Davey</a>
+                <a class="navbar-text navbar-left" href="../index.html">Home</a>
+                <a class="navbar-text navbar-right" href="cathy_wicket.html">Design</a>
+                <a class="navbar-text navbar-right" href="johnny_football.html">Development</a>
+                <a class="navbar-text navbar-right" href="davey_chase.html">Project Management</a>
             </div>
         </nav>
         <div class="container">
-        <div class="row vcenter">
-            <div class="col-12 col-md-8">
-                <h2>Storyfinder, Accountant, Truck Driver, Han Solo's College Roommate. I yell at inanimate objects</h2>
+            <div class="row vcenter">
+                <div class="col-xs-12 col-md-8 margin-top">
+                    <h2 class="lead">Storyfinder, Accountant, Truck Driver, Han Solo's College Roommate. I yell at inanimate objects</h2>
+                </div>
+                <div class="col-xs-12 col-md-4 margin-top">
+                    <img class="img-circle emp-img" src="../img/WDFT - Ben Mitchell.jpg"/>
+                    <h1>Johnny Football</h1>
+                    <h2 class="text-muted">Senior Developer</h2>
+                    <h4 class="text-muted">Age 32</h4>
+                </div>
             </div>
-            <div class="col-12 col-md-4">
-                <img class="img-circle" style="border:2px solid #DDD;width:100px;display:inline;" src="https://randomuser.me/api/portraits/lego/1.jpg"/>
-                <h1>Johnny Football</h1>
-                <h2 class="text-muted">Senior Manager</h2>
-                <h4 class="text-muted">Age 32</h4>
+            <div class="bloat">
             </div>
         </div>
-        </div>
+        <nav class="navbar navbar-inverse border-radius-initial" style="margin-bottom: 0px">
+            <div class="container">
+                <p class="navbar-text navbar-left">Made with &#60;3 by Michael, Justin and Ben</p>
+                <p class="navbar-text navbar-right">2017</p>
+            </div>
+        </nav>
     </body>
 </html>
