--- a/employees/template.html
+++ b/employees/template.html
@@ -13,6 +13,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <a class="navbar-text navbar-left" href="../index.html">Home</a>
+                <a class="navbar-text navbar-right" href="contact.html">Contact</a>
                 <a class="navbar-text navbar-right" href="cathy_wicket.html">Design</a>
                 <a class="navbar-text navbar-right" href="johnny_football.html">Development</a>
                 <a class="navbar-text navbar-right" href="davey_chase.html">Project Management</a>
