--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <a class="navbar-text navbar-left" href="index.html">Home</a>
+                <a class="navbar-text navbar-right" href="contact.html">Contact</a>
                 <a class="navbar-text navbar-right" href="employees/cathy_wicket.html">Design</a>
                 <a class="navbar-text navbar-right" href="employees/johnny_football.html">Development</a>
                 <a class="navbar-text navbar-right" href="employees/davey_chase.html">Project Management</a>
@@ -48,6 +49,16 @@
                 </div>
             </div>
              <div class="bloat">
+                 <div class="row">
+                     <div class="col-xs-12 col-lg-12">
+                         <div class="slogan text-center">
+                             <h3>OUR TEAM IS READY TO MAKE YOUR NEXT PROJECT A SUCCESS</h3>
+                             <div class="btn btn-info">
+                                 <a href="contact.html"<><p>Contact us today</p></a>
+                             </div>
+                         </div>
+                     </div>
+                 </div>
             </div>
         </div>
         <nav class="navbar navbar-inverse border-radius-initial" style="margin-bottom: 0px">
