edited title names for all pages, added jquery stylesheet and youtube background plugin, trying to create background video for home page but not working yet

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/employee-styles.css">
     <link rel="stylesheet" href="css/helpers.css">
+    <title>Contact</title>
 </head>
 
 <body>
@@ -34,7 +35,7 @@
 
             <form>
                 <div class="row">
-                    <div class="col-md-6 col-xs-12">
+                    <div class="col-md-12 col-xs-12">
                         <div class="form-group">
                             <label for="name">
                                 Name</label>
@@ -59,7 +60,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-md-6 col-xs-12">
+                    <div class="col-md-12 col-xs-12">
                         <div class="form-group">
                             <label for="name">
                                 Message</label>
