--- a/employees/cathy_wicket.html
+++ b/employees/cathy_wicket.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="../css/employee-styles.css">
         <link rel="stylesheet" href="../css/helpers.css">
+        <title>Cathy Wicket - Senior Designer</title>
     </head>
 
     <body>
