--- a/employees/johnny_football.html
+++ b/employees/johnny_football.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="../css/employee-styles.css">
         <link rel="stylesheet" href="../css/helpers.css">
+        <title>Johnny Football - Senior Developer</title>
     </head>
 
     <body>
