--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <!--javascript-->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<!--jquery-->
+       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="js/src/jquery.youtubebackground.js"></script> 
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -24,41 +27,43 @@
             <h1 class="">Alpha Prime</h1>
             <h2 class="text-muted">Consulting and Contracting</h2>
         </div>
-        <div class="container" id="employees">
-            <div class="row">
-                <div class="col-xs-12 col-lg-4">
-                    <div class="bio-panel">
-                        <a href="employees/davey_chase.html"><img src="img/WDFT - Michael Carroll.jpg" alt="Cathy Wicket" class="img img-circle"></a>
-                        <a href="employees/davey_chase.html"><h3>Davey Chase</h3></a>
-                        <h3>Project Manager</h3>
+        <div id="video">
+            <div class="container" id="employees">
+                <div class="row">
+                    <div class="col-xs-12 col-lg-4">
+                        <div class="bio-panel">
+                            <a href="employees/davey_chase.html"><img src="img/WDFT - Michael Carroll.jpg" alt="Cathy Wicket" class="img img-circle"></a>
+                            <a href="employees/davey_chase.html"><h3>Davey Chase</h3></a>
+                            <h3>Project Manager</h3>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-lg-4">
+                        <div class="bio-panel">
+                            <a href="employees/johnny_football.html"><img src="img/WDFT - Ben Mitchell.jpg" alt="Davey Chase" class="img img-circle"></a>
+                            <a href="employees/johnny_football.html"><h3>Johnny Football</h3></a>
+                            <h3>Senior Developer</h3>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-lg-4">
+                        <div class="bio-panel">
+                            <a href="employees/cathy_wicket.html"><img src="img/WDFT - Justin Bansal.jpg" alt="Cathy Wicket" class="img img-circle"></a>
+                            <a href="employees/cathy_wicket.html"><h3>Cathy Wicket</h3></a>
+                            <h3>Senior Designer</h3>
+                        </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-lg-4">
-                    <div class="bio-panel">
-                        <a href="employees/johnny_football.html"><img src="img/WDFT - Ben Mitchell.jpg" alt="Davey Chase" class="img img-circle"></a>
-                        <a href="employees/johnny_football.html"><h3>Johnny Football</h3></a>
-                        <h3>Senior Developer</h3>
+                <div class="bloat">
+                    <div class="row">
+                        <div class="col-xs-12 col-lg-12">
+                            <div class="slogan text-center">
+                                <h3>OUR TEAM IS READY TO MAKE YOUR NEXT PROJECT A SUCCESS</h3>
+                                <div class="btn btn-info">
+                                    <a href="contact.html"<><p>Contact us today</p></a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-lg-4">
-                    <div class="bio-panel">
-                        <a href="employees/cathy_wicket.html"><img src="img/WDFT - Justin Bansal.jpg" alt="Cathy Wicket" class="img img-circle"></a>
-                        <a href="employees/cathy_wicket.html"><h3>Cathy Wicket</h3></a>
-                        <h3>Senior Designer</h3>
-                    </div>
-                </div>
-            </div>
-             <div class="bloat">
-                 <div class="row">
-                     <div class="col-xs-12 col-lg-12">
-                         <div class="slogan text-center">
-                             <h3>OUR TEAM IS READY TO MAKE YOUR NEXT PROJECT A SUCCESS</h3>
-                             <div class="btn btn-info">
-                                 <a href="contact.html"<><p>Contact us today</p></a>
-                             </div>
-                         </div>
-                     </div>
-                 </div>
             </div>
         </div>
         <nav class="navbar navbar-inverse border-radius-initial" style="margin-bottom: 0px">
@@ -67,5 +72,21 @@
                 <p class="navbar-text navbar-right">2017</p>
             </div>
         </nav>
+    <script>
+        $('#video').YTPlayer({
+        fitToBackground: true,
+        videoId: 'LSmgKRx5pBo'
+        playerVars: {
+        modestbranding: 0,
+        autoplay: 1,
+        controls: 1,
+        showinfo: 0,
+        branding: 0,
+        rel: 0,
+        autohide: 0,
+        start: 59
+    }
+});
+    </script>
     </body>
 </html>
