--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <!--javascript-->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+<!--jquery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -25,7 +26,6 @@
             <h1 class="">Alpha Prime</h1>
             <h2 class="text-muted">Consulting and Contracting</h2>
         </div>
-        <div id="video">
             <div class="container" id="employees">
                 <div class="row">
                     <div class="col-xs-12 col-lg-4">
@@ -63,38 +63,16 @@
                     </div>
                 </div>
             </div>
-        </div>
+
+        <div class="tv">
+		  <div class="screen mute" id="tv"></div>
+	    </div>
         <nav class="navbar navbar-inverse border-radius-initial" style="margin-bottom: 0px">
             <div class="container">
                 <p class="navbar-text navbar-left">Made with &#60;3 by Michael, Justin and Ben</p>
                 <p class="navbar-text navbar-right">2017</p>
             </div>
         </nav>
- <!--jquery-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="js/src/jquery.youtubebackground.js"></script> 
-    <script>
-        $('#video').YTPlayer({
-        fitToBackground: true,
-        videoId: 'LSmgKRx5pBo'
-        playerVars: {
-            modestbranding: 0,
-            autoplay: 1,
-            controls: 1,
-            showinfo: 0,
-            branding: 0,
-            rel: 0,
-            autohide: 0,
-            start: 59}
-        });
 
-        var player = $('#background-video').data('ytPlayer').player;
-    player.pauseVideo();
-    player.playVideo();
-
-    player.addEventListener('onStateChange', function(data){
-    console.log("Player State Change", data);
-    });
-    </script>
     </body>
 </html>
