added padding for contact us button and also add fotorama image gallery for index main page with customizations - added thumbs and autoplay

--- a/index.html
+++ b/index.html
@@ -2,15 +2,22 @@
 <html>
     <head>
         <title>Employee Database</title>
-<!--stylesheets-->
+
+<!--boostrap javascript-->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<!-- 1. Link to jQuery (1.8 or later), -->
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> <!-- 33 KB -->
+
+<!-- fotorama.css & fotorama.js. -->
+        <link  href="fotorama/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
+        <script src="fotorama/fotorama.js"></script> <!-- 16 KB -->
+
+        <!--stylesheets-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <link rel="stylesheet" type="text/css" href="css/helpers.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<!--javascript-->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<!--jquery-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -58,6 +65,17 @@
                                 <div class="btn btn-info">
                                     <a href="contact.html"<><p>Contact us today</p></a>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">   
+                        <div class="col-xs-12 col-lg-12 gallery">
+                            <div class="fotorama"
+                                data-autoplay="true" data-nav="thumbs">
+                                <img src="img/main.jpg">
+                                <img src="img/computers.jpg">
+                                <img src="img/design.jpg">
+                                <img src="img/mac.jpg">
                             </div>
                         </div>
                     </div>
