--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                     <div class="row">   
                         <div class="col-xs-12 col-lg-12 gallery">
                             <div class="fotorama"
-                                data-autoplay="true" data-nav="thumbs">
-                                <img src="img/main.jpg">
+                                data-autoplay="true" data-nav="thumbs" data-width="100%"
+                                data-ratio="800/600">
                                 <img src="img/computers.jpg">
                                 <img src="img/design.jpg">
                                 <img src="img/mac.jpg">
