remove border on contact div, remove text-decoration on all links, add bio for Johnny

--- a/employees/johnny_football.html
+++ b/employees/johnny_football.html
@@ -23,7 +23,19 @@
         <div class="container">
             <div class="row vcenter">
                 <div class="col-xs-12 col-md-8 margin-top">
-                    <h2 class="lead">Storyfinder, Accountant, Truck Driver, Han Solo's College Roommate. I yell at inanimate objects</h2>
+                    <h2 class="lead">Johnny, as his last name suggests, is an avid sports fan. When he's    not
+                        developing next generation web applications, Johnny enjoys rock-climbing and 
+                        photography.</h2>
+                    <h4 class="text-muted">Specialties include:</h4>
+                    <ul class="text-muted">
+                        <li>Web Development</li>
+                        <ul>
+                            <li>React</li>
+                            <li>node.js</li>
+                        </ul>
+                        <li>Site upgrades</li>
+                        <li>Agile methodologies</li>
+                    </ul>
                 </div>
                 <div class="col-xs-12 col-md-4 margin-top">
                     <img class="img-circle emp-img" src="../img/WDFT - Ben Mitchell.jpg"/>
