--- a/index.html
+++ b/index.html
@@ -33,40 +33,35 @@
             <h1 class="">Alpha Prime</h1>
             <h2 class="text-muted">Consulting and Contracting</h2>
         </div>
-            <div class="container" id="employees">
-                <div class="row">
-                    <div class="col-xs-12 col-lg-4">
-                        <div class="bio-panel">
-                            <a href="employees/davey_chase.html"><img src="img/WDFT - Michael Carroll.jpg" alt="Cathy Wicket" class="img img-circle"></a>
-                            <a href="employees/davey_chase.html"><h3>Davey Chase</h3></a>
-                            <h3>Project Manager</h3>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-lg-4">
-                        <div class="bio-panel">
-                            <a href="employees/johnny_football.html"><img src="img/WDFT - Ben Mitchell.jpg" alt="Davey Chase" class="img img-circle"></a>
-                            <a href="employees/johnny_football.html"><h3>Johnny Football</h3></a>
-                            <h3>Senior Developer</h3>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-lg-4">
-                        <div class="bio-panel">
-                            <a href="employees/cathy_wicket.html"><img src="img/WDFT - Justin Bansal.jpg" alt="Cathy Wicket" class="img img-circle"></a>
-                            <a href="employees/cathy_wicket.html"><h3>Cathy Wicket</h3></a>
-                            <h3>Senior Designer</h3>
-                        </div>
+        <div class="container" id="employees">
+            <div class="row">
+                <div class="col-xs-12 col-lg-4">
+                    <div class="bio-panel">
+                        <a href="employees/davey_chase.html"><img src="img/WDFT - Michael Carroll.jpg" alt="Cathy Wicket" class="img img-circle"></a>
+                        <a href="employees/davey_chase.html"><h3>Davey Chase</h3></a>
+                        <h3>Project Manager</h3>
                     </div>
                 </div>
-                <div class="bloat">
-                    <div class="row">
-                        <div class="col-xs-12 col-lg-12">
-                            <div class="slogan text-center">
-                                <h3>OUR TEAM IS READY TO MAKE YOUR NEXT PROJECT A SUCCESS</h3>
-                                <div class="btn btn-info">
-                                    <a href="contact.html"<><p>Contact us today</p></a>
-                                </div>
-                            </div>
-                        </div>
+                <div class="col-xs-12 col-lg-4">
+                    <div class="bio-panel">
+                        <a href="employees/johnny_football.html"><img src="img/WDFT - Ben Mitchell.jpg" alt="Davey Chase" class="img img-circle"></a>
+                        <a href="employees/johnny_football.html"><h3>Johnny Football</h3></a>
+                        <h3>Senior Developer</h3>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-lg-4">
+                    <div class="bio-panel">
+                        <a href="employees/cathy_wicket.html"><img src="img/WDFT - Justin Bansal.jpg" alt="Cathy Wicket" class="img img-circle"></a>
+                        <a href="employees/cathy_wicket.html"><h3>Cathy Wicket</h3></a>
+                        <h3>Senior Designer</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-lg-12">
+                    <div class="slogan text-center margin-top">
+                        <h3>OUR TEAM IS READY TO MAKE YOUR NEXT PROJECT A SUCCESS</h3>
+                        <button class="btn btn-info"><a href="contact.html">Contact us today</a></button>
                     </div>
                     <div class="row">   
                         <div class="col-xs-12 col-lg-12 gallery">
@@ -81,10 +76,10 @@
                     </div>
                 </div>
             </div>
-
-        <div class="tv">
+        </div>
+        <!--<div class="tv">
 		  <div class="screen mute" id="tv"></div>
-	    </div>
+	    </div>-->
         <nav class="navbar navbar-inverse border-radius-initial" style="margin-bottom: 0px">
             <div class="container">
                 <p class="navbar-text navbar-left">Made with &#60;3 by Michael, Justin and Ben</p>
